# mimir-oxidized

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
.github/workflows/: release.yml
.sqlx/: query-2a397e6d1efa8583acfdf97c742ba1066ca7f4a1f106df88bcfde79cd1e543f7.json  query-ce1be33e5002d499766e292ef0d315c2c1893363de44d95e256d9d7f77be8079.json  query-ee8b0ff0f3c5edf6605ff1cf27a0e297f95ae6493fb6c6c7c485a94d934a6777.json
migrations/: 0001_create_scripts_table.sql
src/: boot.rs  database.rs  main.rs  utils.rs
