[package]
name = "mimir-oxidized"
version = "0.1.0"
description = "mimir but Oxidized"
edition = "2024"
repository = "https://github.com/levenrok/mimir-oxidized"
license = "CC0-1.0"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "tls-rustls"] }
tokio = { version = "1.49.0", features = ["full"] }

[[bin]]
name = "mimir"
path = "src/main.rs"
