[package]
name = "mimir-oxidized"
version = "1.0.0"
description = "mimir but Oxidized"
edition = "2024"
repository = "https://github.com/levenrok/mimir-oxidized"
license = "CC0-1.0"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
clap_complete = "4.5.66"
directories = "6.0.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "tls-rustls"] }
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["full"] }

[[bin]]
name = "mimir"
path = "src/main.rs"
